# MBTI_Data_Collector

./: README.md  data_to_compress.txt  helper  helper.cpp  helper.h  main  main.cpp  test.txt
data_to_collect/: tar_help.txt
data_to_collect/folder_test/: .cproject  .project  helper.cpp  helper.h  test.txt
data_to_collect/folder_test/Debug/: data_collector
data_to_collect/folder_test/Debug/src/: data_collector.d  subdir.mk
data_to_collect/folder_test/Release/: makefile
data_to_collect/folder_test/Release/src/: data_collector.d  subdir.mk
special_folder/: Data_to_collect_20230927142050.tar  Data_to_collect_20230927172503.tar  data_to_collect.tar  data_to_collect_20230926161717.tar  data_to_collect_20230926164750.tar
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  helper.cpp  helper.h  runTests  test.cpp
where_to_store_tar_file/: Collected_data_20230928091142.tar
